--- a/options.html
+++ b/options.html
@@ -20,7 +20,7 @@
   </a>
     </div>
     <div class="col-sm-4">
-    	<a href = "http://counseling.gatech.edu/">
+    	<a href = "http://ase.tufts.edu/counseling/">
       <div class="titlered">
         <h3 class="title"><center>Contact a Professional</center></h3>
       </div>
